# bitbot

./: README.md  pyproject.toml
src/: asyncuploadclient.py  main.py  uploadclient.py  uploader.py
